Fix title text wrapping wrongly.

--- a/web/assets/css/trail.css
+++ b/web/assets/css/trail.css
@@ -475,6 +475,7 @@ html.touch #small_sponsor_bar {
   top: -100px;
   left: 144px;
   color: #44b6f7;
+  white-space: nowrap;
 }
 
 #trailplayer .no_avatar {
